--- a/quiz-client/public/index.html
+++ b/quiz-client/public/index.html
@@ -38,7 +38,7 @@
     />
     <link href="/fontawesome-free-6.4.0-web/css/brands.css" rel="stylesheet" />
     <link href="/fontawesome-free-6.4.0-web/css/solid.css" rel="stylesheet" />
-    <title>React App</title>
+    <title>FisicArena</title>
   </head>
 
   <body>
